# django-book-reader

./: .editorconfig  .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _dummy_threading.data.json  _dummy_threading.meta.json  _imp.data.json  _imp.meta.json  _markupbase.data.json  _markupbase.meta.json  _osx_support.data.json  _osx_support.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  (+214 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/ctypes/: __init__.data.json  __init__.meta.json  wintypes.data.json  wintypes.meta.json
.mypy_cache/3.12/distutils/: __init__.data.json  __init__.meta.json  ccompiler.data.json  ccompiler.meta.json  cmd.data.json  cmd.meta.json  dist.data.json  dist.meta.json  sysconfig.data.json  sysconfig.meta.json
src/config/: asgi.py  urls.py  wsgi.py
src/templates/: base.html
(+677 files in other folders)
